<resources>
    <string name="app_name">StudentID</string>
    <string name="your_id">Your ID</string>
    <string name="your_name">Your name</string>
    <string name="mobie_number">Mobie number</string>
    <string name="test_1">Test 1</string>
    <string name="lab_test">Lab Test</string>
    <string name="test_2">Test 2</string>
    <string name="enter_your_id">Enter your ID</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="test_1_score">Test 1 score</string>
    <string name="lab_test_score">Lab Test score</string>
    <string name="test_2_score">Test 2 score</string>
    <string name="display">DIsplay</string>
    <string name="calculate">Calculate</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="todo">TODO</string>
    <string name="string_todo" />
    <string name="please_enter_your_details">Please Enter your Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_my_details">MyDetailsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mydetails">MyDetails</string>
    <string name="myfinal_grade">MyFinal Grade</string>
    <string name="textview">TextView</string>
    <string name="your_id1">Your Id</string>
    <string name="your_name1">Your Name</string>
    <string name="phone_number1">Phone Number</string>
</resources>